--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
 
 
-<app-header>
-    <app-burger-menu></app-burger-menu>
-</app-header>
+<div class="home-container">
 
+<header app-header class="headerMain"></header>
 
-<h1>Home</h1>
+  <section app-bloc-home class="info-container" jumbotronText="One" ></section>
+  <section app-bloc-home class="info-container"></section>
+
+</div>
