--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: space-between;
   height: 95px;
+  margin-bottom: 30px;
   background-color: $white-transparent-85percent;
 
   .btn-burger {
