--- a/src/app/bloc-home/bloc-home.component.scss
+++ b/src/app/bloc-home/bloc-home.component.scss
@@ -4,16 +4,134 @@
 *
 */
 
-
 @import "../../styles/colors";
 
 
-.info-container{
+.bloc-home {
+  position: relative;
   max-width: 300px;
   margin-left: auto;
   margin-right: auto;
   height: 375px;
+  padding-top: 100px;
   background-color: $white-transparent-85percent;
+  margin-bottom: 90px;
+
+  &:last-child {
+    margin-bottom: 50px;
+  }
+
+
+  &:before,
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: calc(50% - 320px / 2);
+    width: 1px;
+    height: 320px;
+    background-color: #000;
+  }
+
+  &:before {
+    left: 0;
+  }
+
+  &:after {
+    right: 0;
+  }
+
+  .bloc-home-deco {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    &:before,
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      left: calc(50% - 245px / 2);
+      height: 1px;
+      width: 245px;
+      background-color: #000;
+    }
+
+    &:before {
+      top: 0;
+    }
+
+    &:after {
+      bottom: 0;
+    }
+
+  }
+
+  .bloc-home-img-container {
+
+  }
+
+  .homeTitle {
+    display: flex;
+    margin-bottom: 15px;
+    flex-direction: column;
+    align-items: center;
+    font-size: 30px;
+
+    .homeTitle__part1 {
+      font-family: sunshine_daisies_halftoneone, Arial, Helvetica, sans-serif;
+
+    }
+
+    .homeTitle__part2 {
+      font-family: banana_chip_mufflins, Arial, Helvetica, sans-serif;
+    }
+
+    .homeTitle__part3 {
+      margin-top: 60px;
+      font-family: tuesday-script-regular, Arial, Helvetica, sans-serif;
+      font-size: 50px;
+      font-weight: lighter;
+    }
+  }
+
+  .bloc-home-link {
+    display: flex;
+    justify-content: center;
+
+    &:before{
+      content: '';
+      display: block;
+      width: 100px;
+      height: 15px;
+      position: absolute;
+      background-image: url("../../assets/images/svg/liseret-link-home.svg");
+      background-size: 10%
+    ;
+
+    }
+
+    .link {
+      text-decoration: none;
+      font-family: banana_chip_mufflins;
+      color: $grey-5A5C6A;
+
+
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+      }
+    }
+  }
 }
+
+
 
 
