--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,13 +4,37 @@
 *
  */
 
+//@import "../../styles/fonts";
+
+
+
 .home-container {
   position: relative;
   width: 100%;
   height: 100%;
   background-image: url("../../assets/images/fond-gouttes.png");
   background-color: #FFCE71;
+
+  .bloc-home:nth-child(2){
+.bloc-home-img-container{
+  position: absolute;
+  background-image: none;
+}
+  }
+
+  .bloc-home:nth-child(3){
+    .bloc-home-img-container{
+      position: absolute;
+      top: 25px;
+      left: calc(50% - 196px/2);
+      width: 196px;
+      height: 58px;
+      background-image: url("../../assets/images/svg/velo_maison.svg");
+      background-repeat: no-repeat;
+    }
+  }
 }
 
 
 @import "home-responsive";
+
