--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,7 +6,7 @@
  *
  */
 
-//scss imports
+//scss reset imports
 @import'../../node_modules/normalize.scss/normalize.scss';
 
 
@@ -14,7 +14,7 @@
 
 
 html{
-  height: 100%;
+  //height: 100%;
 }
 
 body{
@@ -22,6 +22,7 @@ body{
   height: 100%;
   display: grid;
   grid-template: 25px 1fr 25px / 25px 1fr 25px  ;
+
 }
 
 button{
@@ -38,8 +39,10 @@ figure{
   grid-row: 2;
   grid-column: 2;
   max-width: 100%;
+  height: 100%;
   background-color: #fff;
 }
+
 
 
 
@@ -48,6 +51,10 @@ figure{
 
 //importation variable couleur :
 @import "colors";
+
+
+//importation font :
+@import "fonts";
 
 //
 @import "mixins";
